[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/Game Over/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/GiantRobotArmy-Medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Themes/main_theme.tres" type="Theme" id=3]

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.21252
margin_top = -1.21252
margin_right = -1.21252
margin_bottom = -1.21252
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayedMessage" type="Label" parent="LabelsContainer"]
margin_right = 960.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER!

Your score:"
align = 1
valign = 1

[node name="Score" type="Label" parent="LabelsContainer"]
margin_top = 179.0
margin_right = 960.0
margin_bottom = 220.0
text = "00:00"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="LabelsContainer"]
margin_top = 270.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="LabelsContainer/Buttons"]
margin_right = 430.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayAgain" type="Button" parent="LabelsContainer/Buttons"]
margin_left = 530.0
margin_right = 960.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PLAY AGAIN"
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="LabelsContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="LabelsContainer/Buttons/PlayAgain" to="." method="_on_PlayAgain_pressed"]
